# Credit_scoring_1

./: .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/raw/: UCI_Credit_Card.csv
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id  credit_data_suite.json
scripts/: monitor_drift.py
src/api/: app.py
src/data/: make_dataset.py  run_validation.py  validation.py
src/features/: build_features.py
src/models/: pipeline.py  predict.py  train.py
tests/: test_api.py  test_pipeline.py
