[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-scoring-model"
version = "0.1.0"
authors = [
  {name = "Chunarev_DD", email = "email@example.com"},
]
description = "Credit scoring model for default prediction"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "isort"]

# [tool.setuptools.packages.find]
# where = ["src"] # Закомментировано

[tool.setuptools.packages.find]
where = ["."] # Ищем пакеты в корне проекта
include = ["src*"] # Включаем папку src как пакет и всё внутри

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]